# popgen

./: LICENSE  README.md  requirements.txt  run_popgen.py  setup.cfg
examples/1_basic_popgen_setup/: configuration.yaml  marginals_compare.xls
popgen/: config.py  ipf.py  reweighting.py
src/popgen/: __init__.py  config.py  data.py  draw.py  ipf.py  output.py  project.py
tutorials/1_basic_popgen_setup/2021-10-07 16-30-16 all_controls_ipu/: all_controls_ipu.yaml  draws.csv  hhldtype.csv  housing_synthetic.csv  ipf_geo_average_diffs_household.csv  ipf_region_average_diffs_household.csv  person_synthetic.csv  ptype.csv  reweighting_average_diffs.csv  rhhldtype.csv  summary_geo.csv  summary_region.csv  weights.csv
tutorials/default_example_updated/: configuration.yaml  geo_sample_mapping.csv  household_marginals.csv  household_sample.csv  housing_synthetic_Test.csv  marginals_compare.xls  person_marginals.csv  person_sample.csv  person_synthetic_Test.csv  region_geo_mapping.csv  region_household_marginals.csv  region_sample_mapping.csv
tutorials/example/: configuration.yaml  geo_sample_mapping.csv  household_marginals.csv  household_sample.csv  person_marginals.csv  person_sample.csv  region_geo_mapping.csv  region_household_marginals.csv  region_person_marginals.csv  region_sample_mapping.csv
tutorials/yinput/: configuration.yaml  geo_sample_mapping.csv  household_marginals.csv  person_marginals.csv  region_geo_mapping.csv  region_household_marginals.csv  region_person_marginals.csv  region_sample_mapping.csv
(+32 files in other folders)
