[metadata]
name = popgen
version = 1.0.0
author = TOMNET
author_email = tomnet@asu.edu
description = Synthetic population generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomnetutc/popgen
project_urls =
    Bug Tracker = https://github.com/tomnetutc/popgen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src